[package]
name = "subeng"
version = "0.1.0"
authors = ["max"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "3"
listenfd = "0.3.0"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", features = [ 'postgres','runtime-async-std-native-tls','uuid','chrono', 'macros', 'json', 'time' ] }
# async-std = { version = "1", features = [ "attributes" ] }
dotenv = "0.15.0"
env_logger = "0"
log = "0"
anyhow = "1.0"
futures = "0"
chrono = "0"
merkle-cbt = "0"
sha2 = "0"
tracing = "^0.1.25"
parity-util-mem = "0.9.0"
substrate-subxt =  "0.15.0"
codec = { package = "parity-scale-codec", version = "^2.0.1", default-features = false, features = ["derive", "full"] }

frame-metadata = "13.0.0"
frame-support = "3.0.0"
frame-system = "3.0.0"
sp-keyring = "3.0.0"
sp-runtime = "3.0.0"
sp-version = "3.0.0"
sp-std = "3.0.0"
sp-rpc =  "3.0.0"
sp-core = "3.0.0"

#primitives = { git = "https://github.com/paritytech/substrate", package = "substrate-primitives" }

#[dependencies.node-template-runtime]
#git = "https://github.com/substrate-developer-hub/substrate-node-template.git"

#[dependencies.contracts]
#git = "https://github.com/paritytech/substrate.git"
#package = "pallet-contracts"




